objects/copado__Metadata_Group_Item__c.object
<CustomObject>
    <fields>
        <fullName>copado__Metadata_Group__c</fullName>
        <description>The parent metadata group this item belongs to</description>
        <inlineHelpText>The parent metadata group this item belongs to</inlineHelpText>
        <label>Parent Group</label>
        <referenceTo>copado__Metadata_Group__c</referenceTo>
        <relationshipLabel>Metadata Items</relationshipLabel>
        <relationshipName>Metadata_Group_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Operator__c</fullName>
        <description>Match &apos;All&apos; metadata of this type, or only metadata whose name matches a pattern?</description>
        <inlineHelpText>Match &apos;All&apos; metadata of this type, or only metadata whose name matches a pattern?</inlineHelpText>
        <label>Metadata Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Operator</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <description>The type of metadata</description>
        <inlineHelpText>The type of metadata</inlineHelpText>
        <label>Metadata Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Metadata_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Value__c</fullName>
        <description>Match only metadata whose name matches this value (ignored if Metadata Name = &apos;All&apos; is selected)</description>
        <inlineHelpText>Match only metadata whose name matches this value (ignored if Metadata Name = &apos;All&apos; is selected)</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Metadata Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MGI-{00000000}</displayFormat>
        <label>Metadata Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>copado__Validate_Value_field_against_Operator</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(copado__Operator__c, &apos;All&apos;), NOT(ISBLANK(copado__Value__c)))</errorConditionFormula>
        <errorDisplayField>copado__Value__c</errorDisplayField>
        <errorMessage>When the Operator equals &apos;All&apos;, the Value field must be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Validate_Value_field_against_Operator_2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!ISPICKVAL(copado__Operator__c, &apos;All&apos;), ISBLANK(copado__Value__c))</errorConditionFormula>
        <errorMessage>When the Operator is not &quot;All&quot;, a Value is required.</errorMessage>
    </validationRules>
</CustomObject>